--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS Rest Api for Enterprise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register ./src/cores/test/**/*.js",
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "repository": {
@@ -25,7 +25,12 @@
   },
   "homepage": "https://github.com/apaichon/node_enterprise#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "mongodb": "^2.2.33"
   },
   "devDependencies": {
@@ -36,6 +41,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "mocha": "^4.0.1",
     "nodemon": "^1.11.0",
     "regenerator-runtime": "^0.10.5"
   }
