--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register ./src/cores/test/**/*.js",
-    "dev": "nodemon src/index.js --exec babel-node"
+    "testlist": "mocha --compilers js:babel-core/register ./src/cores/test/testList/*.js",
+    "dev": "nodemon src/index.js --exec babel-node",
+    "gen": "nodemon src/cores/test/generateTest.js --exec babel-node"
   },
   "repository": {
     "type": "git",
